fix odd horizontal scroll bar appearing in mobile

--- a/mobile.css
+++ b/mobile.css
@@ -215,7 +215,13 @@
     padding-left: 5%;
   }
 }
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 420px) {
+  html,
+  body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
   #experienceContainer {
     width: 90%;
   }
